# docker-cpp-opencv3-dlib

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
